--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,11 @@ env_logger = { version = "0.11.8" }
 clap = { version = "4.5.47", features = ["derive", "string"] }
 ratatui = { version = "0.29.0", features = ["crossterm"] }
 yaml-rust2 = { version = "0.10.4" }
+kube-client = { version = "2.0.1", features = ["rustls-tls"] }
+k8s-openapi = { version = "0.26.0", features = ["v1_30"] }
+tokio = { version = "1.47.1", features = ["full"] }
+thiserror = { version = "2.0.16" }
+futures = { version = "0.3.31" }
 
 [lints.clippy]
 all = "warn"
