--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ k8s-openapi = { version = "0.26.0", features = ["v1_30"] }
 tokio = { version = "1.47.1", features = ["full"] }
 thiserror = { version = "2.0.16" }
 futures = { version = "0.3.31" }
+regex = { version = "1.11.2" }
 
 [lints.clippy]
 all = "warn"
