--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,16 @@ env_logger = { version = "0.11.8" }
 clap = { version = "4.5.47", features = ["derive", "string"] }
 ratatui = { version = "0.29.0", features = ["crossterm"] }
 kube-client = { version = "2.0.1", features = ["rustls-tls"] }
-k8s-openapi = { version = "0.26.0", features = ["v1_30"] }
+k8s-openapi = { version = "0.26.0", features = ["v1_30"] } # Required by kube-client
 tokio = { version = "1.47.1", features = ["full"] }
 thiserror = { version = "2.0.16" }
 futures = { version = "0.3.31" }
 regex = { version = "1.11.2" }
+openapiv3 = { version = "2.2.0" }
+http = { version = "1.3.1" }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = { version = "1.0.145" }
+bytes = { version = "1.10.1" }
 
 [lints.clippy]
 all = "warn"
