--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ http = { version = "1.3.1" }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = { version = "1.0.145" }
 bytes = { version = "1.10.1" }
+yaml_parser = { version = "0.2.3" }
 
 [lints.clippy]
 all = "warn"
