--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = { version = "1.0.145" }
 bytes = { version = "1.10.1" }
 yaml_parser = { version = "0.2.3" }
+rowan = { version = "0.16.1"}
 
 [lints.clippy]
 all = "warn"
