--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ thiserror = { version = "2.0.16" }
 # CLI Parsing
 clap = { version = "4.5.47", features = ["derive", "string"] }
 # UI
-ratatui = { version = "0.29.0", features = ["crossterm"] }
-tui-textarea = { version = "0.7.0" }
+ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
+tui-textarea = { version = "0.7.0", default-features = false, features = ["crossterm"] }
 # Kubernetes & API
 kube-client = { version = "2.0.1", features = ["rustls-tls"] }
 k8s-openapi = { version = "0.26.0", features = ["v1_30"] } # Required by kube-client
